# alt-sendme

./: .env.production  .gitignore  CONTRIBUTING.md  PRIVACY.md  README.md  package.json  tsconfig.lib-test.json  vite.config.ts
.github/ISSUE_TEMPLATE/: report-bug.md
.github/actions/setup-linuxdeploy/: action.yml
.github/workflows/: lint.yml  publish-winget.yml  publish.yml
deploy/relay/: README.md  fly.toml  iroh-relay.conf.example
engine/: Cargo.toml
engine-wasm/: Cargo.toml
engine-wasm/src/: lib.rs
engine/native/: Cargo.toml
engine/native/src/: device_identity.rs  identity_store.rs  lib.rs  node.rs  paired_connections.rs  pairing_dev_log.rs  pairing_util.rs
engine/protocol/: Cargo.toml
engine/protocol/src/: control.rs  identity.rs  lib.rs  pairing.rs  types.rs
engine/src/: lib.rs
engine/src/core/: mod.rs  receive.rs  send.rs  storage.rs  types.rs
engine/tests/: test_pairing.rs  test_pairing_e2e.rs  test_single_file.rs
engine/wasm-io/: Cargo.toml
frontend/: index.html
frontend/public/: manifest.json
frontend/src/: vite-env.d.ts
frontend/src/components/: AppFooter.tsx  LanguageSwitcher.tsx
frontend/src/hooks/: usePairedDeviceEvents.ts  (+3 more)
scripts/: build-wasm-bridge.js  generate-release-notes.js  package-windows-portable.js  patch-linux-deb.js  sync-version.js
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
src-tauri/WiX/: context-menu.wxs
src-tauri/capabilities/: default.json  sendme.json
src-tauri/src/: commands.rs  lib.rs  main.rs  tray.rs
src-tauri/windows/: hooks.nsh
wasm-bridge/: Cargo.toml
(+61 files in other folders)
